# TomoPainter

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
src/sqlscripts/: create_tables.sql  write_model_df.sql  write_phv_df.sql  write_vs_df.sql
src/tomopainter/: __init__.py
src/tomopainter/rose/: __init__.py  data_info.py  grid.py  path.py  points.py  profile.py  query.py  util.py
src/tomopainter/tomo_paint/: area.py  dispersion.py  paint.py  phase.py  s_wave.py
src/tomopainter/tomo_paint/gmt/: __init__.py  gmt_fig.py  gmt_make_data.py  panel.py  plot_area.py  plot_diff.py  plot_vel.py  plot_vs.py
src/tomopainter/tomo_show/: __init__.py  add_slide.py  make_ppt.py
tests/: test_basalt_age.py  test_sql.py  test_sql_key.py
tomo/: __init__.py
tomo/rose/: __init__.py  data_info.py  grid.py  points.py
tomo/tomo_paint/: __init__.py  area.py  dispersion.py  paint.py  phase.py  s_wave.py
tomo/tomo_paint/gmt/: __init__.py  gmt_fig.py  gmt_make_data.py  panel.py  plot_area.py  plot_dc.py  plot_diff.py  plot_vel.py  plot_vs.py
tomo/tomo_show/: __init__.py  add_slide.py  show.py
